[gd_scene load_steps=4 format=2]

[ext_resource path="res://Models/PoliceCar.scn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Props/PoliceCar.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 0.750865, 1.64688 )

[node name="PoliceCar" type="StaticBody"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.756241, 0.125443 )
shape = SubResource( 1 )

[node name="PoliceCar" parent="." instance=ExtResource( 1 )]

[node name="EmergencyLights" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.92321, 0.0591426 )

[node name="LightL" type="OmniLight" parent="EmergencyLights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.75, 0, 0 )
visible = false
light_color = Color( 0, 0.505882, 1, 1 )
light_energy = 7.0
light_specular = 0.0
light_bake_mode = 2

[node name="LightR" type="OmniLight" parent="EmergencyLights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.75, 0, 0 )
light_color = Color( 0, 0.505882, 1, 1 )
light_energy = 7.0
light_specular = 0.0
light_bake_mode = 2

[node name="EmergencyLightSwitchTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="FrontLigths" type="Spatial" parent="."]
transform = Transform( -1, 0, 8.74228e-08, 2.75544e-08, 0.94903, 0.315185, -8.29668e-08, 0.315185, -0.94903, 0, 0.886871, 1.08824 )

[node name="LightL" type="SpotLight" parent="FrontLigths"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.75, 0, 0 )
light_color = Color( 1, 0.956863, 0.698039, 1 )
light_energy = 15.0
light_indirect_energy = 0.0
light_bake_mode = 2
spot_range = 15.0
spot_angle = 31.1395

[node name="LightR" type="SpotLight" parent="FrontLigths"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.75, 0, 0 )
light_color = Color( 1, 0.956863, 0.698039, 1 )
light_energy = 15.0
light_indirect_energy = 0.0
light_bake_mode = 2
spot_range = 15.0
spot_angle = 31.1395

[connection signal="timeout" from="EmergencyLightSwitchTimer" to="." method="_switch_emergency_lights"]
